# cplusplus

firstlab/: firstlab.cbp  firstlab.depend  firstlab.layout  main.cpp
firstlab/include/: ArrayClass.h
firstlab/src/: ArrayClass.cpp
lab3/: CMakeLists.txt  String.cpp  String.h  main.cpp
lab4/: CMakeLists.txt  Circle.cpp  Circle.h  Cylinder.cpp  Cylinder.h  Parallelepiped.cpp  Parallelepiped.h  Parallelogram.cpp  Parallelogram.h  Point.cpp  Point.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  ThreeDShape.cpp  ThreeDShape.h  Triangle.cpp  Triangle.h  TwoDShape.cpp  TwoDShape.h  main.cpp
