cmake_minimum_required(VERSION 3.15)
project(lab4)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab4 main.cpp Point.cpp Point.h Shape.cpp Shape.h TwoDShape.cpp TwoDShape.h Circle.cpp Circle.h Triangle.cpp Triangle.h Parallelogram.cpp Parallelogram.h ThreeDShape.cpp ThreeDShape.h Cylinder.cpp Cylinder.h Sphere.cpp Sphere.h Parallelepiped.cpp Parallelepiped.h)